<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="app_name">Share We</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xuancool">炫</string>
    <string name="cool">秀出你态度</string>
    <string name="logobtn">logo</string>
    <string name="settingbtn">setting</string>
    <string name="loginbtn">loginbtn</string>
    <string name="registerbtn">regbtn</string>
    <string name="looks">精摘美文/Looks</string>
    <string name="showimg">showimg</string>
    <string name="showinfo">用文字拉近你我</string>
    <string name="showimggo">showimggo</string>
    <string name="shopping">分享一下/Share We</string>
    <string name="shoppinginfo">美好生活你我共享</string>
    <string name="shopimg">shopimg</string>
    <string name="cshow">开心段子/Happy</string>
    <string name="cshowinfo">快乐无界限</string>
    <string name="pshow">关于我/Me</string>
    <string name="pshowinfo">你的分享</string>
    <string name="meshow">关于 Share We</string>
    <string name="meshowinfo">我有我风格</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_ghgff">Ghgff</string>
    <string name="back">返回</string>
    <string name="shezhi">设置</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_fashion">Fashion</string>
    <string name="logintxt">登录</string>
    <string name="registertxt">注册</string>
    <string name="zhanghao">账 号 </string>
    <string name="mima">密  码 </string>
    <string name="nicheng">昵  称 :</string>
    <string name="zzhanghao">账  号 :</string>
    <string name="zmima">密  码 :</string>
    <string name="zqmima">确认密码:</string>
    <string name="chongz">重置</string>
    <string name="logoname">Share We</string>
    <string name="now">立刻注册</string>
    <string name="me">个人中心</string>
    <string name="meme">个人资料</string>
    <string name="sex">男</string>
    <string name="coolsex">性别</string>
    <string name="name">昵称</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_about_cool">AboutCoolActivity</string>
    <string name="toux">炫酷头像</string>
    <string name="coolni">炫酷昵称</string>
    <string name="ok">保存信息</string>
    <string name="xuan">动态圈</string>
    <string name="qx">取消</string>
    <string name="fabiao">发表</string>
    <string name="fenxiang">转发或分享</string>
    <string name="savephone">保存的手机</string>
    <string name="title_activity_hah_item">HaItemActivity</string>
    <string name="title_activity_app_start">AppStartActivity</string>

    
    <style name="CustomDialog" parent="@android:style/Theme.Dialog">  
    <item name="android:windowFrame">@null</item>  
        <item name="android:windowIsFloating">true</item>  
        <item name="android:windowContentOverlay">@null</item>  
        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>  
        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>  
    </style>  
      
    <style name="CustomProgressDialog" parent="@style/CustomDialog">  
        <item name="android:windowBackground">@android:color/transparent</item>  
        <item name="android:windowNoTitle">true</item>  
    </style>  
    
    
    
    
    
    
    
    
    
    
    
    
    
    
</resources>
