<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/huise"
    android:orientation="vertical" >
<!-- 标题头 -->
    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/top_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="2dip" >

        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
             android:id="@+id/tv_back_btn"
            >
        
           <TextView 
               android:layout_marginLeft="2dp"
             android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:background="@drawable/zoujiantou"
            android:layout_gravity="center_vertical"
               />
            
         <TextView
         
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
               android:gravity="center_vertical|center_horizontal"
             android:paddingLeft="4dp"
             android:text="@string/logoname"
             android:textColor="#000"
             android:textSize="17sp" >

        </TextView>
</LinearLayout>

        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/meme"
            android:textColor="#3D4245"
            android:textSize="18sp" >
        </TextView>
    </FrameLayout>

    <!-- 灰色线条 -->

    <LinearLayout
        android:id="@+id/huixian01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/FrameLayout1"
        android:background="@color/huise"
        android:orientation="horizontal" >
    </LinearLayout>

    <!-- 头像 -->

    <FrameLayout
        android:id="@+id/frame"
        android:layout_below="@id/huixian01"
        android:layout_width="fill_parent"
        android:layout_height="100dp" >

        <Button
            android:id="@+id/frametoux"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/butbg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="8dp"
            android:text="@string/toux"
            android:textColor="#3D4245"
            android:textSize="15sp" />

        <cn.guyu.util.XCRoundImageView
            android:id="@+id/xinxi_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center|right"
            android:layout_marginRight="50dp"
           />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/youjiantou" />
    </FrameLayout>

    <!-- 灰色线条 -->

    <LinearLayout
        android:id="@+id/huixian1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/frame"
        android:background="@color/huise"
        android:orientation="horizontal" >
    </LinearLayout>

  

   

    <!-- 性别 -->

   
    <LinearLayout
        android:id="@+id/linearlayout_sex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/huixian1"
       
        android:background="@drawable/butbg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="8dp"
            android:layout_weight="3"
            android:text="@string/coolsex"
            android:textColor="#3D4245"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="#3D4245" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/youjiantou" />
    </LinearLayout>
    
    
    
    
    <!-- 灰色线条 -->

    <LinearLayout
        android:id="@+id/huise3"
        android:layout_below="@id/linearlayout_sex"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@color/huise" >
    </LinearLayout>
    
   
      <!-- 昵称 -->

 <LinearLayout
        android:id="@+id/linearLayout_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/huise3"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="8dp"
            android:layout_weight="3"
            android:text="@string/coolni"
            android:textColor="#3D4245"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape"
            android:gravity="center"
            android:maxLength="9"
            android:singleLine="true"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/youjiantou" />
    </LinearLayout>
    
    
    
<!-- 完善信息 -->
   
    <LinearLayout
        
        android:id="@+id/linearlayout_save"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout_name"
       android:layout_marginTop="20dp"
        android:background="@drawable/butbg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="26dp"
            android:layout_weight="3"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ok"
            android:textColor="#3D4245"
            android:textSize="15sp" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/youjiantou" />
    </LinearLayout>
  

    
    
    
    
    
 <!-- 男女选择框 -->   
     <LinearLayout
         android:id="@+id/LinearLayout_sex_nn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical" 
        android:visibility="gone"
  
    >

        <TextView
            android:id="@+id/man"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="男"
            android:textSize="15sp"
            android:textColor="#3366CC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/huise" >
        </LinearLayout>

        <TextView
            android:id="@+id/nv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="女"
            android:textSize="15sp"
            android:textColor="#3366CC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/huise" >
        </LinearLayout>

        <TextView
            android:id="@+id/quxiao"
            android:layout_width="match_parent"
            android:layout_height="45dp"
              android:gravity="center_vertical|center_horizontal"
            android:text="取消"
            android:textSize="15sp"
            android:textColor="#3366CC" />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/huise" >
        </LinearLayout>
    </LinearLayout>
    
    
    
</RelativeLayout>